Tests and Codgen fixes to build most AWS API models (#1081)
* Tests and Codgen fixes to build most AWS API models

* Track Schema generation size more accurately